crates/ignis_analyzer/tests/snapshots/golden_ok__extension_method_mut_on_mutable_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn increment(value: i32): i32
  body:
    Block : never
      statements:
        Return : never
          Binary(Add) : i32
            left:
              Variable(value [param]) : i32
            right:
              Literal(Int32(1)) : i32

fn main(): void
  body:
    Block : never
      statements:
        Let(x [mut]) : void
          init:
            Literal(Int32(5)) : i32
        Let(y) : void
          init:
            Call(increment) : i32
              args:
                [0]:
                  Variable(x [mut]) : i32
        Return : never

--- Variable Initializers ---

x: i32 [mut] = Literal(Int32(5))
y: i32 = Call(increment) { Variable(x) }
