crates/ignis_analyzer/tests/snapshots/golden_ok__extension_method_str_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn isEmpty(value: str): bool
  body:
    Block : never
      statements:
        Return : never
          Literal(Boolean(false)) : bool

fn main(): void
  body:
    Block : never
      statements:
        Let(s) : void
          init:
            Literal(String("hello")) : str
        Let(result) : void
          init:
            Call(isEmpty) : bool
              args:
                [0]:
                  Variable(s) : str
        Return : never

--- Variable Initializers ---

result: bool = Call(isEmpty) { Variable(s) }
s: str = Literal(String("hello"))
