crates/ignis_analyzer/tests/snapshots/golden_ok__extension_method_string_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn isEmpty(value: string): error
  body:
    Block : never
      statements:
        Return : never
          Literal(Boolean(false)) : bool

fn main(): void
  body:
    Block : never
      statements:
        Let(s) : void
          init:
            Literal(String("hello")) : string
        Let(result) : void
          init:
            Call(isEmpty) : error
              args:
                [0]:
                  Variable(s) : string
        Return : never

--- Variable Initializers ---

result: error = Call(isEmpty) { Variable(s) }
s: string = Literal(String("hello"))
