crates/ignis_analyzer/tests/snapshots/golden_ok__extension_method_with_args_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn add(value: i32, other: i32): i32
  body:
    Block : never
      statements:
        Return : never
          Binary(Add) : i32
            left:
              Variable(value [param]) : i32
            right:
              Variable(other [param]) : i32

fn main(): i32
  body:
    Block : never
      statements:
        Let(x) : void
          init:
            Literal(Int32(10)) : i32
        Return : never
          Call(add) : i32
            args:
              [0]:
                Variable(x) : i32
              [1]:
                Literal(Int32(5)) : i32

--- Variable Initializers ---

x: i32 = Literal(Int32(10))
