crates/ignis_analyzer/tests/snapshots/golden_ok__extern_const_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Declarations ---

extern const PI: f64

--- Definitions ---

fn area(radius: f64): f64
  body:
    Block : never
      statements:
        Return : never
          Binary(Mul) : f64
            left:
              Binary(Mul) : f64
                left:
                  Variable(PI [const]) : f64
                right:
                  Variable(radius [param]) : f64
            right:
              Variable(radius [param]) : f64
