crates/ignis_analyzer/tests/snapshots/golden_ok__extern_function_diags.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
assertion_line: 44
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
(no diagnostics)
