crates/ignis_analyzer/tests/snapshots/golden_ok__extern_function_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
assertion_line: 48
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Declarations ---

fn puts(s: string): i32  [extern]
