crates/ignis_analyzer/tests/snapshots/golden_ok__for_loop_diags.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
assertion_line: 138
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[ERROR] A0045: Type mismatch: expected 'void', found 'i32'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:60-69
[ERROR] A0019: Binary operator 'LessThan' cannot be applied to types 'void' and 'i32'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:71-77
[ERROR] A0019: Binary operator 'Add' cannot be applied to types 'void' and 'i32'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:83-88
[ERROR] A0019: Binary operator 'Add' cannot be applied to types 'i32' and 'void'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:108-117
